--- a/src/index.css
+++ b/src/index.css
@@ -45,12 +45,36 @@ html, body {
 
 .box {
   color: #fff;
-  border-radius: 15px;
-
   /* Align Content Vertically & Horizontally */
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.circle {
+  border-radius: 50%;
+  animation-name: square-to-circle;
+  animation-duration: 0.25s;
+}
+@keyframes square-to-circle {
+  0% {
+    border-radius: 0;
+  }
+  100% {
+    border-radius: 50%;
+  }
+}
+.square {
+  border-radius: 0;
+  animation-name: circle-to-square;
+  animation-duration: 0.25s;
+}
+@keyframes circle-to-square {
+  0% {
+    border-radius: 50%;
+  }
+  100% {
+    border-radius: 0;
+  }
 }
 
 .material-icons.big-symbol.o { font-size: 8em; }
