--- a/src/components/board/Tile/tile.css
+++ b/src/components/board/Tile/tile.css
@@ -12,6 +12,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    /* Firefox. Fixes issue in Firefox where text got automatically selected */
+    /* https://stackoverflow.com/questions/6900124/how-to-make-certain-text-not-selectable-with-css */
+    -moz-user-select: none
 }
 
 .circle {
