--- a/src/components/board/BigBoard/bigboard.css
+++ b/src/components/board/BigBoard/bigboard.css
@@ -1,14 +1,7 @@
-.big-board {
-    display: grid;
-    grid-template-columns: 12.5vh 12.5vh 12.5vh;
-    grid-template-rows: 12.5vh 12.5vh 12.5vh;
-    grid-gap: 2vh;
-}
 
-@media(min-width: 35em) {
     .big-board {
-        grid-template-columns: 20vh 20vh 20vh;
-        grid-template-rows: 20vh 20vh 20vh;
-        grid-gap: 4vh;
+        display: grid;
+        grid-template-columns: 25vmin 25vmin 25vmin;
+        grid-template-rows: 25vmin 25vmin 25vmin;
+        grid-gap: 1vmin;
     }
-}
