--- a/src/components/symbols/symbolAnimations.css
+++ b/src/components/symbols/symbolAnimations.css
@@ -1,4 +1,4 @@
-.animate-x-big-symbol {
+/*.animate-x-big-symbol {
     animation-duration: 0.75s;
     animation-name: add-icon-big-x;
 }
@@ -123,4 +123,4 @@
             font-size: 8rem;
         }
     }
-}
+}*/
