Update style of Game Finished Component
This way it looks less out of place. This is only a work in progress
design though.

--- a/src/components/symbols/symbols.css
+++ b/src/components/symbols/symbols.css
@@ -2,3 +2,6 @@
 .material-icons.big-symbol.x { font-size: 23vmin; }
 .material-icons.big-symbol.no-winner { font-size: 23vmin; }
 .material-icons { font-size: 5vmin; }
+
+.o { vertical-align: middle; }
+.x { vertical-align: middle; }
