--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,50 @@
 html, body {
-  width: 100vw;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
+    width: 100vw;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 
-  overflow: hidden;
+    overflow: hidden;
 
-  font-family: sans-serif;
+    font-family: Ubuntu, Helvetica, "Helvetica Neue", sans-serif;
 }
 
 .center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .text-center {
-  text-align: center;
+    text-align: center;
+}
+
+.text-game-ends {
+    font-size: 3.5vmin;
+}
+
+.vertical-middle {
+    vertical-align: middle;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Montserrat Regular'), url(//brick.a.ssl.fastly.net/fonts/montserrat/300.woff) format('woff')
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Roboto-Regular'), url(//brick.a.ssl.fastly.net/fonts/roboto/400.woff) format('woff')
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Ubuntu'), url(//brick.a.ssl.fastly.net/fonts/ubuntu/400.woff) format('woff')
 }
