--- a/src/fonts/icons.css
+++ b/src/fonts/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./icomoon.eot?9md3g5');
-  src:  url('./icomoon.eot?9md3g5#iefix') format('embedded-opentype'),
-    url('./icomoon.ttf?9md3g5') format('truetype'),
-    url('./icomoon.woff?9md3g5') format('woff'),
-    url('./icomoon.svg?9md3g5#icomoon') format('svg');
+  src:  url('icomoon.eot?k2c5g2');
+  src:  url('icomoon.eot?k2c5g2#iefix') format('embedded-opentype'),
+    url('icomoon.ttf?k2c5g2') format('truetype'),
+    url('icomoon.woff?k2c5g2') format('woff'),
+    url('icomoon.svg?k2c5g2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,9 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-cross:before {
+.icon-x:before {
   content: "\274c";
 }
-.icon-circle:before {
+.icon-o:before {
   content: "\25ef";
+}
+.icon-no-winner:before {
+  content: "\e15b";
 }
