--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 html, body {
-    width: 100vw;
-    min-height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     margin: 0;
     padding: 0;
-
-    overflow: hidden;
 
     /* Got this from medium: https://medium.design/system-shock-6b1dc6d6596f */
     font-family: -apple-system, ".SFNSText-Regular",
