remove margin and add overflow
in the deployed version it is not an issue, don't know why ...

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ html, body {
     margin: 0;
     padding: 0;
 
+    overflow: hidden;
+
     /* Got this from medium: https://medium.design/system-shock-6b1dc6d6596f */
     font-family: -apple-system, ".SFNSText-Regular",
     "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
