--- a/src/components/symbols/symbolAnimations.css
+++ b/src/components/symbols/symbolAnimations.css
@@ -1,79 +1,103 @@
-.animate-x-big-symbol {
+.big-symbol.animate-x {
     animation-duration: 0.75s;
     animation-name: add-icon-big-x;
 }
 
-.animate-o-big-symbol {
+.big-symbol.animate-o {
     animation-duration: 0.75s;
     animation-name: add-icon-big-o;
 }
 
-.animate-no-winner-big-symbol {
+/* No winner is always animated */
+.big-symbol.no-winner {
     animation-duration: 0.75s;
     animation-name: add-icon-big-no-winner;
 }
 
-.animate-o, .animate-x {
+.animate-x {
     animation-duration: 0.75s;
-    animation-name: add-icon;
+    animation-name: add-icon-x;
 }
 
-@keyframes add-icon {
+.animate-o {
+    animation-duration: 0.75s;
+    animation-name: add-icon-o;
+}
+
+/* later TODO: use css variables and calculate the value? How high is the browser support? */
+
+/* TODO: put keyframes in the classes themselves!!!  */
+@keyframes add-icon-x {
     0% {
-        font-size: 10vmin;
+        font-size: 12vmin;
     }
     25% {
-        font-size: 2vmin;
+        font-size: 4vmin;
     }
     50% {
-        font-size: 7vmin;
+        font-size: 9vmin;
     }
     100% {
-        font-size: 5vmin;
+        font-size: 7vmin;
+    }
+}
+
+@keyframes add-icon-o {
+    0% {
+        font-size: 11vmin;
+    }
+    25% {
+        font-size: 3vmin;
+    }
+    50% {
+        font-size: 8vmin;
+    }
+    100% {
+        font-size: 6vmin;
     }
 }
 
 @keyframes add-icon-big-x {
     0% {
-        font-size: 39vmin;
+        font-size: 46vmin;
     }
     25% {
-        font-size: 8vmin;
+        font-size: 15vmin;
     }
     60% {
-        font-size: 29vmin;
+        font-size: 36vmin;
     }
     100% {
-        font-size: 23vmin;
+        font-size: 30vmin;
     }
 }
 
 @keyframes add-icon-big-o {
     0% {
-        font-size: 30vmin;
+        font-size: 34vmin;
     }
     25% {
-        font-size: 8vmin;
+        font-size: 12vmin;
     }
     60% {
-        font-size: 23vmin;
+        font-size: 27vmin;
     }
     100% {
-        font-size: 17vmin;
+        font-size: 21vmin;
     }
 }
 
 @keyframes add-icon-big-no-winner {
     0% {
-        font-size: 39vmin;
+        font-size: 45vmin;
     }
     25% {
-        font-size: 8vmin;
+        font-size: 14vmin;
     }
     60% {
-        font-size: 29vmin;
+        font-size: 35vmin;
     }
     100% {
-        font-size: 23vmin;
+        font-size: 29vmin;
     }
 }
