--- a/src/fonts/icons.css
+++ b/src/fonts/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('icomoon.eot?k2c5g2');
-  src:  url('icomoon.eot?k2c5g2#iefix') format('embedded-opentype'),
-    url('icomoon.ttf?k2c5g2') format('truetype'),
-    url('icomoon.woff?k2c5g2') format('woff'),
-    url('icomoon.svg?k2c5g2#icomoon') format('svg');
+  src:  url('icomoon.eot?5vaxa7');
+  src:  url('icomoon.eot?5vaxa7#iefix') format('embedded-opentype'),
+  url('icomoon.ttf?5vaxa7') format('truetype'),
+  url('icomoon.woff?5vaxa7') format('woff'),
+  url('icomoon.svg?5vaxa7#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,12 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-x:before {
-  content: "\274c";
-}
 .icon-o:before {
-  content: "\25ef";
+  content: "\e900";
 }
 .icon-no-winner:before {
-  content: "\e15b";
+  content: "\e901";
+}
+.icon-x:before {
+  content: "\e902";
 }
