--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+    /* TODO: add my colors as CSS variables and use them everywhere!! */
+
+    --mdc-theme-primary: #008891;
+}
+
 html, body {
     max-width: 100vw;
     max-height: 100vh;
