move inline style to css

--- a/src/components/GameFinishedDisplay/gameFinished.css
+++ b/src/components/GameFinishedDisplay/gameFinished.css
@@ -5,6 +5,10 @@
     margin-right: 1em;
 }
 
+.game-finished {
+    font-size: 5vmin;
+}
+
 .restart-alignment {
     display: flex;
     justify-content: center;
