--- a/src/components/Board/SmallBoard/smallboard.css
+++ b/src/components/Board/SmallBoard/smallboard.css
@@ -1,4 +1,4 @@
-/*
+
 .small-board {
     display: grid;
     grid-template-columns: 8vmin 8vmin 8vmin;
@@ -10,9 +10,9 @@
     display: grid;
     grid-template-columns: 25vmin;
     grid-template-rows: 25vmin;
-}*/
+}
 
-/* TODO this is temporary. either change to css variables or make two classes.*/
+/* TODO this is temporary. either change to css variables or make two classes.
 .small-board {
     display: grid;
     grid-template-columns: 4vmin 4vmin 4vmin;
@@ -24,4 +24,4 @@
     display: grid;
     grid-template-columns: 13vmin;
     grid-template-rows: 13vmin;
-}
+}*/
