--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,8 @@
 }
 
 html, body {
-    max-width: 100vw;
-    max-height: 100vh;
     margin: 0;
     padding: 0;
-
     overflow: hidden;
 
     /* Got this from medium: https://medium.design/system-shock-6b1dc6d6596f */
@@ -18,22 +15,20 @@ html, body {
     "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
 }
 
+html,body, .center, #root {
+    height: 100%
+}
+
 .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.game-wrapper {
+    display: grid;
 }
 
 .text-center {
     text-align: center;
-}
-
-.flex-middle {
-    display: flex;
-    justify-content: center;
-}
-
-.vertical-middle {
-    vertical-align: middle;
 }
