--- a/src/views/analysis.css
+++ b/src/views/analysis.css
@@ -6,13 +6,14 @@
     display: grid;
     grid-gap: 1em;
     grid-template-areas: "moveList" "game";
+    height: 100%;
 }
 
 .moveList {
+    grid-area: moveList;
     padding: 0;
     overflow-y: scroll;
-    max-height: 65vmin;
-    grid-area: moveList;
+    min-height: 50vmin;
 }
 
 .analysisGame {
@@ -20,47 +21,14 @@
     align-self: center;
 }
 
-@media only screen and (min-width: 660px) and (max-width: 1100px) {
-    .moveList {
-        max-height: 50vmin;
-    }
-
-    .analysisGame > .big-board {
-        grid-template-columns: 21vmin 21vmin 21vmin;
-        grid-template-rows: 21vmin 21vmin 21vmin;
-        grid-gap: 1vmin;
-    }
-
-    .analysisGame > .small-board {
-        grid-template-columns: 6.5vmin 6.5vmin 6.5vmin;
-        grid-template-rows: 6.5vmin 6.5vmin 6.5vmin;
-    }
-
-    .analysisGame > .small-board-finished {
-        grid-template-columns: 20.5vmin;
-        grid-template-rows: 20.5vmin;
-    }
-}
-
-@media only screen and (min-width: 830px) {
-    .moveList {
-        max-height: 35vmin;
-    }
-}
-
-@media only screen and (min-width: 950px) {
-    .moveList {
-        max-height: 30vmin;
-    }
-}
-
 @media only screen and (min-width: 1100px) {
     .moveList {
         max-height: 81vmin;
+        align-self: center;
     }
 
     .analysisLayout {
-        grid-template-columns: 30vmin auto;
+        grid-template-columns: minmax(30vmin, 1fr) auto;
         grid-template-areas: "moveList game";
     }
 }
