--- a/src/views/Analysis/analysis.css
+++ b/src/views/Analysis/analysis.css
@@ -22,7 +22,7 @@
 }
 
 .historyButtons {
-    padding: 1em;
+    padding-bottom: 1em;
     display: flex;
     justify-content: center;
     max-height: 10vmin;
