--- a/src/components/Board/BigBoard/bigboard.css
+++ b/src/components/Board/BigBoard/bigboard.css
@@ -3,4 +3,5 @@
     grid-template-columns: 25vmin 25vmin 25vmin;
     grid-template-rows: 25vmin 25vmin 25vmin;
     grid-gap: 3vmin;
+    justify-content: center;
 }
