--- a/src/fonts/icons.css
+++ b/src/fonts/icons.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('icomoon.eot?5vaxa7');
-  src:  url('icomoon.eot?5vaxa7#iefix') format('embedded-opentype'),
-  url('icomoon.ttf?5vaxa7') format('truetype'),
-  url('icomoon.woff?5vaxa7') format('woff'),
-  url('icomoon.svg?5vaxa7#icomoon') format('svg');
+  src:
+          url('icomoon.ttf?802tsf') format('truetype'),
+          url('icomoon.woff?802tsf') format('woff'),
+          url('icomoon.svg?802tsf#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,12 +23,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-x:before {
+  content: "\e5cd";
+}
+.icon-arrow-left:before {
+  content: "\e314";
+}
+.icon-arrow-right:before {
+  content: "\e315";
+}
 .icon-o:before {
-  content: "\e900";
+  content: "\e836";
 }
 .icon-no-winner:before {
-  content: "\e901";
-}
-.icon-x:before {
-  content: "\e902";
+  content: "\e15b";
 }
