--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,13 @@ html, body {
     /* From medium: https://medium.design/system-shock-6b1dc6d6596f */
     font-family: -apple-system, ".SFNSText-Regular",
     "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
+
+    margin-bottom: 1em;
 }
 
 html,body, .center, #root {
-    height: 100%
+    height: 100%;
+    width: 100%;
 }
 
 .center {
