--- a/src/views/Analysis/analysis.css
+++ b/src/views/Analysis/analysis.css
@@ -31,15 +31,21 @@
     margin: 5px;
 }
 
-@media only screen and (min-width: 560px) and (max-height: 768px), only screen and (min-width: 1350px)  {
+@media only screen and (min-width: 641px) and (max-height: 768px), only screen and (min-width: 1350px)  {
     .moveList {
         max-height: 81vmin;
     }
 
     .analysisLayout {
-        grid-template-columns: minmax(30vmin, 1fr) auto;
-        grid-template-rows: minmax(7vmin, 10vmin) 81vmin;
+        grid-template-columns: minmax(20vmin, 1fr) auto;
+        grid-template-rows: minmax(9vmin, 12vmin) 81vmin;
         grid-template-areas: ". historyButtons" "moveList game";
         align-items: center;
+        grid-column-gap: 1.5em;
     }
+
+    .analysisLayout .mdc-list-item__graphic {
+        margin-right: 17px !important;
+    }
+
 }
