--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ html,body, .center, #root {
     justify-content: center;
 }
 
-.game-wrapper {
+.gameWrapper {
     display: grid;
     overflow: hidden;
 }
