--- a/src/fonts/icons.css
+++ b/src/fonts/icons.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('icomoon.ttf?802tsf') format('truetype'),
-    url('icomoon.woff?802tsf') format('woff'),
-    url('icomoon.svg?802tsf#icomoon') format('svg');
+  src:
+    url('./icomoon.ttf?qokblh') format('truetype'),
+    url('./icomoon.woff?qokblh') format('woff'),
+    url('./icomoon.svg?qokblh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^='icon-'],
-[class*=' icon-'] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -23,18 +23,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-x:before {
-  content: '\e5cd';
-}
 .icon-arrow-left:before {
-  content: '\e314';
+  content: "\e314";
 }
 .icon-arrow-right:before {
-  content: '\e315';
+  content: "\e315";
 }
 .icon-o:before {
-  content: '\e836';
+  content: "\e900";
 }
-.icon-no-winner:before {
-  content: '\e15b';
+.icon-draw:before {
+  content: "\e901";
+}
+.icon-x:before {
+  content: "\e902";
 }
