--- a/src/components/Board/SmallBoard/SmallBoard.css
+++ b/src/components/Board/SmallBoard/SmallBoard.css
@@ -1,12 +1,15 @@
 .small-board {
   display: grid;
-  grid-template-columns: 8vmin 8vmin 8vmin;
-  grid-template-rows: 8vmin 8vmin 8vmin;
+  grid-template-columns: 3vmin 3vmin 3vmin;
+  grid-template-rows: 3vmin 3vmin 3vmin;
   grid-gap: 0.5vmin;
 }
 
 .small-board-finished {
   display: grid;
-  grid-template-columns: 25vmin;
-  grid-template-rows: 25vmin;
+  grid-template-columns: 10vmin;
+  grid-template-rows: 10vmin;
 }
+
+/* TODO make separate classes for Big SmallBoard and Small SmallBoard */
+/* OR: configure these with CSS Vars? */
