--- a/src/fonts/icons.css
+++ b/src/fonts/icons.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'icomoon';
-  src:
-    url('./icomoon.ttf?qokblh') format('truetype'),
+  src: url('./icomoon.ttf?qokblh') format('truetype'),
     url('./icomoon.woff?qokblh') format('woff'),
     url('./icomoon.svg?qokblh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -24,17 +24,17 @@
 }
 
 .icon-arrow-left:before {
-  content: "\e314";
+  content: '\e314';
 }
 .icon-arrow-right:before {
-  content: "\e315";
+  content: '\e315';
 }
 .icon-o:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-draw:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-x:before {
-  content: "\e902";
+  content: '\e902';
 }
