--- a/src/icons/icons.css
+++ b/src/icons/icons.css
@@ -1,8 +1,13 @@
+.rmwc-icon {
+  vertical-align: middle;
+}
+
+/* Icon font */
 @font-face {
   font-family: 'icomoon';
-  src: url('./icomoon.ttf?qokblh') format('truetype'),
-    url('./icomoon.woff?qokblh') format('woff'),
-    url('./icomoon.svg?qokblh#icomoon') format('svg');
+  src: url('font/icomoon.ttf?qnf9tb') format('truetype'),
+    url('font/icomoon.woff?qnf9tb') format('woff'),
+    url('font/icomoon.svg?qnf9tb#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,12 +28,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrow-left:before {
-  content: '\e314';
-}
-.icon-arrow-right:before {
-  content: '\e315';
-}
 .icon-o:before {
   content: '\e900';
 }
@@ -37,4 +36,10 @@
 }
 .icon-x:before {
   content: '\e902';
+}
+.icon-arrow-left:before {
+  content: '\e314';
+}
+.icon-arrow-right:before {
+  content: '\e315';
 }
