add padding to cards list

--- a/src/views/Analysis/Overview/AnalysisOverview.module.css
+++ b/src/views/Analysis/Overview/AnalysisOverview.module.css
@@ -4,7 +4,7 @@
   height: 100%;
 
   /* For a smaller gap between the small boards -> em will be smaller then*/
-  font-size: 9px;
+  font-size: 7px;
 }
 
 .header {
@@ -17,6 +17,7 @@
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   grid-gap: 2em;
   margin-bottom: 2em;
+  padding: 1em;
 }
 
 .winnerIcon {
