improve big board sizing (new layout) for the main game for all screens

--- a/src/components/GameFinishedDisplay/GameFinished.module.css
+++ b/src/components/GameFinishedDisplay/GameFinished.module.css
@@ -1,22 +1,16 @@
 .winnerText {
-  margin: 0 0 0.5rem;
+  margin: 0 1em 0 0;
+}
+
+.winnerIcon {
+  vertical-align: bottom;
 }
 
 .restartAlignment {
-  display: grid;
+  display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
-}
-
-@media only screen and (min-width: 505px) {
-  .restartAlignment {
-    grid-template-columns: auto auto;
-  }
-
-  .winnerText {
-    margin: 0 1em 0 0;
-  }
 }
 
 .hidden {
