--- a/src/views/Game/Game.module.css
+++ b/src/views/Game/Game.module.css
@@ -1,10 +1,13 @@
 .gameWrapper {
   display: grid;
-  width: 50%;
   margin-top: 1em;
   margin-bottom: 1em;
 
-  font-size: 7px;
+  font-size: 9px;
+}
+
+.bigBoardSize {
+  width: 80vmin;
 }
 
 @media only screen and (min-width: 500px) {
