--- a/src/views/Analysis/Overview/AnalysisOverview.module.css
+++ b/src/views/Analysis/Overview/AnalysisOverview.module.css
@@ -11,7 +11,7 @@
   grid-area: header;
 
   padding-left: 3em;
-  color: var(--mdc-theme-secondary);
+  color: var(--mdc-theme-primary);
 }
 
 .gameList {
