--- a/src/views/Game/Game.module.css
+++ b/src/views/Game/Game.module.css
@@ -10,6 +10,10 @@
   width: 80vmin;
 }
 
+.applyHeight {
+  height: 100%;
+}
+
 @media only screen and (min-width: 500px) {
   .gameWrapper {
     font-size: 12px;
