--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,21 @@
   --mdc-theme-text-icon-on-background: black;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html,
-body {
-  margin: 0;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   padding: 0;
+  margin: 0;
 }
 
 html,
