add margin to history buttons

--- a/src/views/Analysis/Game/AnalysisGame.module.css
+++ b/src/views/Analysis/Game/AnalysisGame.module.css
@@ -48,6 +48,10 @@
   .analysisGame {
     width: inherit;
   }
+
+  .historyButtons {
+    margin-bottom: 1em;
+  }
 }
 
 @media screen and (min-width: 1000px) {
