--- a/src/views/Analysis/Game/AnalysisGame.module.css
+++ b/src/views/Analysis/Game/AnalysisGame.module.css
@@ -1,13 +1,12 @@
 .analysisLayout {
   font-size: 16px;
-
-  padding: 1em;
+  margin-bottom: 1em;
 
   display: grid;
-  grid-row-gap: 1em;
+  grid-row-gap: 0.5em;
   grid-column-gap: 1.5em;
   grid-template-areas: 'moveList' 'historyButtons' 'game';
-  grid-template-rows: minmax(50vmin, 0.3fr) minmax(min-content, 7vmin) 0.3fr;
+  grid-template-rows: minmax(50vmin, 70vmin) minmax(min-content, 7vmin) 0.3fr;
 }
 
 .moveList {
@@ -32,7 +31,6 @@
 @media screen and (min-width: 640px) and (max-height: 768px),
   screen and (min-width: 1025px) {
   .analysisLayout {
-    padding: 0;
     margin: 0.25em 0 0.25em;
 
     grid-template-columns: minmax(min-content, 1fr) minmax(80vmin, 85vmin);
