fix card sizing issue

--- a/src/views/Analysis/Overview/AnalysisOverview.module.css
+++ b/src/views/Analysis/Overview/AnalysisOverview.module.css
@@ -20,6 +20,7 @@
   grid-area: gameList;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+  grid-template-rows: min-content;
   grid-gap: 2em;
   margin-bottom: 2em;
   padding: 1em;
