change from div to buttons
advantages:

- keyboard accessible (tab + enter key)

- screenreaders now know that the buttons exist

- you know in a good way which button is selected

--- a/src/components/Board/SmallBoard/SmallBoard.module.css
+++ b/src/components/Board/SmallBoard/SmallBoard.module.css
@@ -5,8 +5,8 @@
   justify-content: center;
 }
 
-.smallBoard div::before,
-.smallBoardFinished div::before {
+.smallBoard button::before,
+.smallBoardFinished button::before {
   content: '';
   padding-bottom: 100%;
   display: inline-block;
