improve a11y with labels, disabled attribute and improve focus style
Apply focus style only for keyboard users on supported platforms

--- a/src/components/Symbols/Symbols.module.css
+++ b/src/components/Symbols/Symbols.module.css
@@ -16,6 +16,13 @@
   width: 85%;
 }
 
+.o,
+.x,
+.draw {
+  /* SVG is not focusable via keyboard so we can safely remove the focus styles! */
+  outline: none;
+}
+
 .animateX,
 .animateO,
 .animateDraw {
