--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,13 @@ body,
 .text-center {
   text-align: center;
 }
+
+.sr-only {
+  position: absolute;
+  overflow: hidden;
+  height: 1px;
+  width: 1px;
+  white-space: nowrap;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
