--- a/src/components/Board/Tile/Tile.module.css
+++ b/src/components/Board/Tile/Tile.module.css
@@ -16,6 +16,14 @@
   box-shadow: inset 0 0 0 3px var(--vampire-bite);
 }
 
+.tile:focus:not(:focus-visible) {
+  box-shadow: none;
+}
+
+.tile:focus-visible {
+  box-shadow: inset 0 0 0 3px var(--vampire-bite);
+}
+
 .tile.normal {
   background-color: var(--incremental-blue);
 }
