--- a/src/index.css
+++ b/src/index.css
@@ -14,21 +14,33 @@
 
 html,
 body,
+#root {
+  height: 100%;
+}
+
+html,
+body,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-p {
+p,
+button {
   padding: 0;
   margin: 0;
 }
 
-html,
-body,
-#root {
-  height: 100%;
+/* Reset Button Default styles */
+button {
+  border: inherit;
+  font: inherit;
+  text-align: inherit;
+  background-color: inherit;
+  text-transform: inherit;
+  text-indent: inherit;
+  text-shadow: inherit;
 }
 
 .centerAll {
