fix full width of move list button

--- a/src/components/Analysis/MoveList/MoveList.module.css
+++ b/src/components/Analysis/MoveList/MoveList.module.css
@@ -2,6 +2,10 @@
   padding: 0 !important;
 }
 
+.fullWidth {
+  width: 100%;
+}
+
 .smallerMargin :global(.mdc-list-item__graphic) {
   margin-right: 15px !important;
 }
