--- a/src/components/Board/Tile/Tile.module.css
+++ b/src/components/Board/Tile/Tile.module.css
@@ -5,7 +5,10 @@
   align-items: center;
   justify-content: center;
 
+  /* Fix for Re-Layouting Bug in Safari: #186 */
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .tile:focus {
