--- a/src/views/Analysis/Overview/AnalysisOverview.module.css
+++ b/src/views/Analysis/Overview/AnalysisOverview.module.css
@@ -1,6 +1,5 @@
 .analysisOverviewLayout {
   display: grid;
-  grid-template-areas: 'header' 'gameList';
   height: 100%;
 
   /* For a smaller gap between the small boards -> em will be smaller then*/
@@ -8,8 +7,6 @@
 }
 
 .header {
-  grid-area: header;
-
   padding-left: 3em;
   margin-bottom: 3em;
   margin-top: 3em;
@@ -17,12 +14,11 @@
 }
 
 .gameList {
-  grid-area: gameList;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   grid-template-rows: min-content;
   grid-gap: 2em;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   padding: 1em;
 }
 
@@ -34,4 +30,10 @@
   .gameList {
     grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
   }
+}
+
+.paging {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4em;
 }
